// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToastMessage rendering does not render close button if type is fatal 1`] = `
<div
  className="ToastMessage ToastMessage--fatal"
  data-testid="toast-fatal"
  id="toast-0"
  role="alert"
>
  <div
    className="ToastMessage__text"
    data-testid="message"
  >
    This is a test
  </div>
</div>
`;

exports[`ToastMessage rendering renders action button if type is action 1`] = `
<div
  className="ToastMessage ToastMessage--action"
  data-testid="toast-action"
  id="toast-0"
  role="alert"
>
  <div
    className="ToastMessage__text"
    data-testid="message"
  >
    This is a test
  </div>
  <Button
    className="ToastMessage__button"
    data-testid="toast-button"
    onClick={[Function]}
    size="small"
    text="Action"
    type="primary"
  />
</div>
`;

exports[`ToastMessage rendering renders close button if type is error 1`] = `
<div
  className="ToastMessage ToastMessage--error"
  data-testid="toast-error"
  id="toast-0"
  role="alert"
>
  <div
    className="ToastMessage__text ToastMessage__text--closeable"
    data-testid="message"
  >
    This is a test
  </div>
  <div
    aria-label="Dismiss"
    className="ToastMessage__close"
    data-testid="toast-close"
    onClick={[Function]}
    role="button"
  >
    <SvgIcon
      icon={
        Object {
          "icon": Array [],
        }
      }
    />
  </div>
  <div
    className="ToastMessage__time"
  />
</div>
`;
